logs/products.quillsenabled.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/QuillsEnabled'...
Listing './lib/python3.5/site-packages/Products/QuillsEnabled/Extensions'...
Listing './lib/python3.5/site-packages/Products/QuillsEnabled/adapters'...
Listing './lib/python3.5/site-packages/Products/QuillsEnabled/browser'...
Listing './lib/python3.5/site-packages/Products/QuillsEnabled/profiles'...
Listing './lib/python3.5/site-packages/Products/QuillsEnabled/profiles/default'...
Listing './lib/python3.5/site-packages/Products/QuillsEnabled/tests'...
Listing './lib/python3.5/site-packages/Products/basesyndication'...
Listing './lib/python3.5/site-packages/Products/basesyndication/browser'...
Listing './lib/python3.5/site-packages/Products/fatsyndication'...
Listing './lib/python3.5/site-packages/Products/fatsyndication/adapters'...
Listing './lib/python3.5/site-packages/Products/fatsyndication/browser'...
Listing './lib/python3.5/site-packages/Products/fatsyndication/profiles'...
Listing './lib/python3.5/site-packages/Products/fatsyndication/profiles/default'...
Listing './lib/python3.5/site-packages/Products/fatsyndication/skins'...
Listing './lib/python3.5/site-packages/Products/fatsyndication/skins/fatsyndication'...
Listing './lib/python3.5/site-packages/Products.QuillsEnabled-1.7.0.egg-info'...
Listing './lib/python3.5/site-packages/Products.basesyndication-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/Products.fatsyndication-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/quills'...
Listing './lib/python3.5/site-packages/quills/app'...
Listing './lib/python3.5/site-packages/quills/app/browser'...
Compiling './lib/python3.5/site-packages/quills/app/browser/defaultviews.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (defaultviews.py, line 15)
Listing './lib/python3.5/site-packages/quills/app/locales'...
Listing './lib/python3.5/site-packages/quills/app/locales/cy'...
Listing './lib/python3.5/site-packages/quills/app/locales/cy/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quills/app/locales/da'...
Listing './lib/python3.5/site-packages/quills/app/locales/da/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quills/app/locales/de'...
Listing './lib/python3.5/site-packages/quills/app/locales/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quills/app/locales/en'...
Listing './lib/python3.5/site-packages/quills/app/locales/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quills/app/locales/es'...
Listing './lib/python3.5/site-packages/quills/app/locales/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quills/app/locales/eu'...
Listing './lib/python3.5/site-packages/quills/app/locales/eu/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quills/app/locales/fr'...
Listing './lib/python3.5/site-packages/quills/app/locales/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quills/app/locales/it'...
Listing './lib/python3.5/site-packages/quills/app/locales/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quills/app/locales/ja'...
Listing './lib/python3.5/site-packages/quills/app/locales/ja/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quills/app/locales/lt'...
Listing './lib/python3.5/site-packages/quills/app/locales/lt/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quills/app/locales/nl'...
Listing './lib/python3.5/site-packages/quills/app/locales/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quills/app/locales/pt'...
Listing './lib/python3.5/site-packages/quills/app/locales/pt/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quills/app/locales/pt-br'...
Listing './lib/python3.5/site-packages/quills/app/locales/pt-br/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quills/app/locales/ru'...
Listing './lib/python3.5/site-packages/quills/app/locales/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quills/app/locales/sr'...
Listing './lib/python3.5/site-packages/quills/app/locales/sr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quills/app/locales/sr-Latn'...
Listing './lib/python3.5/site-packages/quills/app/locales/sr-Latn/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quills/app/locales/sv'...
Listing './lib/python3.5/site-packages/quills/app/locales/sv/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quills/app/portlets'...
Listing './lib/python3.5/site-packages/quills/app/profiles'...
Listing './lib/python3.5/site-packages/quills/app/profiles/default'...
Listing './lib/python3.5/site-packages/quills/app/remoteblogging'...
Compiling './lib/python3.5/site-packages/quills/app/setuphandlers.py'...
***   File "./lib/python3.5/site-packages/quills/app/setuphandlers.py", line 9
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/quills/app/skins'...
Listing './lib/python3.5/site-packages/quills/app/skins/Quills'...
Listing './lib/python3.5/site-packages/quills/app/tests'...
Listing './lib/python3.5/site-packages/quills/core'...
Listing './lib/python3.5/site-packages/quills/core/browser'...
Listing './lib/python3.5/site-packages/quills/core/interfaces'...
Listing './lib/python3.5/site-packages/quills/core/locales'...
Listing './lib/python3.5/site-packages/quills/core/locales/cy'...
Listing './lib/python3.5/site-packages/quills/core/locales/cy/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quills/core/locales/da'...
Listing './lib/python3.5/site-packages/quills/core/locales/da/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quills/core/locales/de'...
Listing './lib/python3.5/site-packages/quills/core/locales/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quills/core/locales/en'...
Listing './lib/python3.5/site-packages/quills/core/locales/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quills/core/locales/es'...
Listing './lib/python3.5/site-packages/quills/core/locales/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quills/core/locales/eu'...
Listing './lib/python3.5/site-packages/quills/core/locales/eu/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quills/core/locales/fr'...
Listing './lib/python3.5/site-packages/quills/core/locales/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quills/core/locales/it'...
Listing './lib/python3.5/site-packages/quills/core/locales/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quills/core/locales/ja'...
Listing './lib/python3.5/site-packages/quills/core/locales/ja/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quills/core/locales/lt'...
Listing './lib/python3.5/site-packages/quills/core/locales/lt/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quills/core/locales/nl'...
Listing './lib/python3.5/site-packages/quills/core/locales/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quills/core/locales/pt'...
Listing './lib/python3.5/site-packages/quills/core/locales/pt/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quills/core/locales/pt-br'...
Listing './lib/python3.5/site-packages/quills/core/locales/pt-br/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quills/core/locales/ru'...
Listing './lib/python3.5/site-packages/quills/core/locales/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quills/core/locales/sr'...
Listing './lib/python3.5/site-packages/quills/core/locales/sr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quills/core/locales/sr-Latn'...
Listing './lib/python3.5/site-packages/quills/core/locales/sr-Latn/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quills/core/tests'...
Listing './lib/python3.5/site-packages/quills.app-1.7.0.egg-info'...
Listing './lib/python3.5/site-packages/quills.core-1.7.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
